# weighted-voronoi-stippling-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  article.md  bench.json  conanfile.py
bench/: benchmark_levels.cpp
src/: common.hpp  level0_rejection.cpp  level0_rejection.hpp  level1_brute_force.cpp  level1_brute_force.hpp  level2_par_unseq.cpp  level2_par_unseq.hpp  level2_spatial_grid.cpp  level2_spatial_grid.hpp  level3_prefix_sum.cpp  level3_prefix_sum.hpp  level4_par_unseq.cpp  level4_par_unseq.hpp  level4_parallel.cpp  level4_parallel.hpp  level4_quadtree.cpp  level4_quadtree.hpp  level5_tiled.cpp  level5_tiled.hpp  quadtree.hpp  spatial_grid.hpp  weighted_cvd.cpp
